# PPPCode_GUI

./: CMakeLists.txt  README.md
17th/: 17-1Triangle.cpp  17-2Functional_Image.cpp  17-3Patterns.cpp  17-4Text_and_Picture.cpp  17-5Checkerboard.cpp  17-6Five_Ring_Olympic_Flag.cpp  17-7Regular_Polygon.cpp
18th/: 18-1Grid.cpp  18-2Rectangle.cpp  18-3Color_Matrix.cpp  18-4Text_Ellipse.cpp  18-5Exercise_Matrix.cpp
19th/: 19-1Iterator.cpp  19-2What().cpp
20th/: 20-1A_Simple_Draw.cpp  20-2exp.cpp  20-3Draw_Data_Picture.cpp  20-4Leibnitz_Series.cpp  20-5height_graph.cpp
21th/: 21-1lines_windows.cpp  21-2moving_picture.cpp  21-3Calculator.cpp  21-4Clock.cpp
24th/: 24-1Liner_Equations.cpp  test.cpp
GUI/: Graph.cpp  Graph.h  Simple_window.cpp  Simple_window.h  Window.h  std_lib_facilities.h
