cmake_minimum_required(VERSION 3.25)
project(C___Principle_Practise_GUI)
set(CMAKE_EXE_LINKER_FLAGS -static)
set(CMAKE_CXX_STANDARD 17)
include_directories("D:\\MyApplication\\FLTK-1.4\\FLTK\\include")
include_directories("D:\\MyApplication\\FLTK-1.4\\FLTK\\include\\FL\\images")
link_directories("D:\\MyApplication\\FLTK-1.4\\FLTK\\lib")
link_libraries("D:\\MyApplication\\FLTK-1.4\\FLTK\\lib\\libfltk_images.a")
link_libraries("D:\\MyApplication\\FLTK-1.4\\FLTK\\lib\\libfltk_jpeg.a")
link_libraries("D:\\MyApplication\\FLTK-1.4\\FLTK\\lib\\libfltk_png.a")
link_libraries("user32")
link_libraries("fltk")
link_libraries("ws2_32")
link_libraries("wsock32")
link_libraries("comctl32")
link_libraries("gdiplus")
link_libraries("m")
add_executable(C___Principle_Practise_GUI GUI/Simple_window.cpp GUI/Window.cpp GUI/GUI.cpp GUI/Graph.cpp
        24th/test.cpp)

